--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   <link rel="stylesheet" href="css/owl.carousel.min.css" />
   <link rel="stylesheet" href="css/owl.theme.default.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -33,7 +34,9 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-11 col-xl-2">
-          <h1 class="mb-0 site-logo"><a href="index.html" class="text-white mb-0">Brand</a></h1>
+          <h1 class="mb-0 site-logo"><a href="index.html" class="text-white mb-0">
+              <img src="images/logo.png" class="img-fluid magenta-logo" /></a>
+          </h1>
         </div>
         <div class="col-12 col-md-10 d-none d-xl-block">
           <nav class="site-navigation position-relative text-right" role="navigation">
@@ -67,10 +70,10 @@
     <div class="col-md-12">
       <div class="slider-hero">
         <div class="featured-carousel owl-carousel">
-          <div class="item">
+          <!-- <div class="item">
             <div class="work">
               <div class="img d-flex align-items-center justify-content-center"
-                style="background-image: url(images/slider-1.jpg)">
+                style="background-image: url(images/slider-0.jpg)">
                 <div class="text text-center">
                   <h2>Travel through taste</h2>
                   <h2>with Taste Trekker</h2>
@@ -80,11 +83,11 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="item">
             <div class="work">
               <div class="img d-flex align-items-center justify-content-center"
-                style="background-image: url(images/slider-2.jpg)">
+                style="background-image: url(images/slider-1.jpg)">
                 <div class="text text-left">
                   <h2>Dễ dàng</h2>
                   <h2 class="text-gray">mở gian hàng online</br>
@@ -99,30 +102,55 @@
           <div class="item">
             <div class="work">
               <div class="img d-flex align-items-center justify-content-center"
+                style="background-image: url(images/slider-2.jpg)">
+                <div class="text text-left">
+                  <h2>Quán tốt giá hời</h2>
+                  <h2 class="text-gray">thoải mái trải nghiệm</br>
+                    đặc sản</h2>
+                  <p> Gợi ý cho bạn những quán ăn, địa điểm</br>
+                    bán đặc sản địa phương mà bạn đang du lịch. </p>
+                  <button class="btn btn-primary">Trải nghiệm ngay</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="work">
+              <div class="img d-flex align-items-center justify-content-center"
                 style="background-image: url(images/slider-3.jpg)">
-                <div class="text text-center">
-                  <h2>Travel Exploration</h2>
+                <div class="text text-left">
+                  <h2>Đa dạng lựa chọn</h2>
+                  <h2 class="text-gray">các loại đặc sản</br>
+                    Việt Nam</h2>
+                  <p> Gợi ý cho bạn những quán ăn, địa điểm</br>
+                    bán đặc sản địa phương mà bạn đang du lịch. </p>
+                  <button class="btn btn-primary">Trải nghiệm ngay</button>
                 </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="my-5 text-center">
-          <ul class="thumbnail">
-            <li class="active img">
-              <a href="#"><img src="images/thumb-1.jpg" alt="Image" class="img-fluid" /></a>
+        <div class="text-center">
+          <ul class="thumbnail choose-carousel ">
+            <li class="choose-carousel-1">
+              <a href="#"><img src="images/Icon1.png" alt="Image" class="img-fluid" /></a>
+              <p>Mua đặc sản online</p>
             </li>
-            <li>
-              <a href="#"><img src="images/thumb-2.jpg" alt="Image" class="img-fluid" /></a>
+            <li class="choose-carousel-2">
+              <a href="#"><img src="images/Icon2.png" alt="Image" class="img-fluid" /></a>
+              <p>Tìm đặc sản gần bạn</p>
             </li>
-            <li>
-              <a href="#"><img src="images/thumb-3.jpg" alt="Image" class="img-fluid" /></a>
+            <li class="choose-carousel-3">
+              <a href="#"><img src="images/Icon3.png" alt="Image" class="img-fluid" /></a>
+              <p>Mở gian hàng online</p>
             </li>
           </ul>
         </div>
+
       </div>
     </div>
+    <div class="line-down"></div>
     </div>
     </div>
   </section>
@@ -141,18 +169,69 @@
       <img src="images/Hand.png" alt="hand" class="img-fluid" />
     </div>
   </div>
+
   <div class="row magenta pt-0">
     <div class="col-12 col-md-12 text text-center">
       <h1 class="text-quote">&CloseCurlyDoubleQuote;</h1>
       <h2>Một nền tảng dành riêng </br>
         cho đặc sản vùng miền</h2>
     </div>
+  </div>
+  <div class="row magenta magenta-black ">
+    <div class="col-12 col-md-6 text">
+      <img src="images/Customer.png" alt="customer" class="img-fluid" />
+    </div>
+    <div class="col-12 col-md-6 text">
+      <h3>Đối với khách hàng</h3>
+      <p>Taste Trekker sẽ mang cho bạn những thực phẩm đặc sản </br>
+        của nơi mà bạn muốn, để có thể dễ dàng thưởng thức đặc sản </br>
+        ngay tại nhà mà không cần phải đi đâu xa. Ngoài ra, </br>
+        đối với khách hàng là người đang đi du lịch tại địa phương, </br>
+        Taste Trekker sẽ gợi ý cho bạn những địa điểm bán đặc sản </br>
+        tại đó với giá cả phải chăng mà không lo bị chém giá. </p>
+    </div>
+  </div>
+  <div class="row magenta black d-flex align-items-end">
+    <div class="col-12 col-md-6 text my-0">
+      <h3>Đối với nhà cung cấp</h3>
+      <p>Taste Trekker sẽ giúp bạn tạo một gian hàng online trên app </br>
+        của chúng tôi, giúp thúc đẩy doanh số bán hàng và đưa mặt hàng </br>
+        của bạn đến với tay người tiêu dùng. Ngoài ra, với cửa hàng offline,</br>
+        Taste Trekker sẽ đưa ra gợi ý cho khách hàng về cửa hàng của bạn</br>
+        với sự uy tín cao, giúp nâng cao số lượt khách và gia tăng lượng hàng</br>
+        mà bạn bán được. </p>
+    </div>
+    <div class="col-12 col-md-5 offset-md-1 text">
+      <img src="images/Vendor.png" alt="vendor" class="img-fluid" />
+    </div>
+  </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
+  <div class="row magenta ">
+    <div class="col-12 col-md-6 text">
+      <h2>Tham gia trải nghiệm </br>
+        nhận ngay voucher </br>
+        giảm giá lên đến 30%</h2>
+      <p>Trong thời gian diễn ra sự kiện ra mắt app,</br>
+        chỉ cần quét mã QR download app sẽ có cơ hội</br>
+        nhận voucher giảm giá cho đơn hàng đầu tiên</br>
+        lên đến 30%.</p>
+      <button class="btn btn-primary btn-outline-white">Trải nghiệm ngay</button>
+    </div>
+    <div class="col-12 col-md-3 offset-md-2 text text-center">
+      <img src="images/QR.jpg" alt="QR" class="img-fluid border-qr" />
+      <p class="mt-3">Thời gian: 5/6 - 12/6/2023</p>
+    </div>
+  </div>
+
+  <footer class="row magenta pb-5">
+    <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+  </footer>
+
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
