--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 
   <link rel="stylesheet" href="css/owl.carousel.min.css" />
   <link rel="stylesheet" href="css/owl.theme.default.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="fonts/icomoon/style.css">
 
   <link rel="stylesheet" href="css/animate.css" />
   <link rel="stylesheet" href="css/style.css" />
@@ -94,7 +91,8 @@
                     trên Taste Trekker</h2>
                   <p class="text-dark-red"> Nơi bạn thoả sức trải nghiệm đặc sản </br>
                     khắp mọi nơi cách nhanh chóng, đa dạng </p>
-                  <button class="btn btn-primary">Trải nghiệm ngay</button>
+                  <button class="btn btn-primary ">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i>
+                  </button>
                 </div>
               </div>
             </div>
@@ -109,7 +107,7 @@
                     đặc sản</h2>
                   <p> Gợi ý cho bạn những quán ăn, địa điểm</br>
                     bán đặc sản địa phương mà bạn đang du lịch. </p>
-                  <button class="btn btn-primary">Trải nghiệm ngay</button>
+                  <button class="btn btn-primary ">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i>
                 </div>
               </div>
             </div>
@@ -124,7 +122,7 @@
                     Việt Nam</h2>
                   <p> Gợi ý cho bạn những quán ăn, địa điểm</br>
                     bán đặc sản địa phương mà bạn đang du lịch. </p>
-                  <button class="btn btn-primary">Trải nghiệm ngay</button>
+                  <button class="btn btn-primary ">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i>
                 </div>
               </div>
             </div>
@@ -147,7 +145,6 @@
             </li>
           </ul>
         </div>
-
       </div>
     </div>
     <div class="line-down"></div>
@@ -191,7 +188,7 @@
         tại đó với giá cả phải chăng mà không lo bị chém giá. </p>
     </div>
   </div>
-  <div class="row magenta black d-flex align-items-end">
+  <div class="row magenta black d-flex align-items-end pb-5">
     <div class="col-12 col-md-6 text my-0">
       <h3>Đối với nhà cung cấp</h3>
       <p>Taste Trekker sẽ giúp bạn tạo một gian hàng online trên app </br>
@@ -204,6 +201,37 @@
     <div class="col-12 col-md-5 offset-md-1 text">
       <img src="images/Vendor.png" alt="vendor" class="img-fluid" />
     </div>
+  </div>
+
+  <div id="carouselScreen" class="carousel slide p-5 black" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselScreen" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselScreen" data-slide-to="1"></li>
+      <li data-target="#carouselScreen" data-slide-to="2"></li>
+      <li data-target="#carouselScreen" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block mx-auto w-25" src="images/Screen-order.png" alt="Screen-order">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block mx-auto w-25" src="images/Screen-receive-product.png" alt="Screen-receive-product">
+      </div>
+      <div class="carousel-item ">
+        <img class="d-block mx-auto w-25" src="images/Screen-select-product.png" alt="Screen-select-product">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block mx-auto w-25" src="images/Screen-tracking.png" alt="Screen tracking">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselScreen" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselScreen" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 
   <div class="row magenta ">
@@ -224,14 +252,18 @@
   </div>
 
   <footer class="row magenta pb-5">
-    <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+    <a href="https://www.facebook.com/tastetrekker.store" class="col-sm-1 offset-sm-5"><img src="images/icon-fb.png"
+        alt="facebook" class="img-fluid " /></a>
+    <a href="https://www.facebook.com/tastetrekker.store" class="col-sm-1 "><img src="images/icon-ins.svg"
+        alt="instagram" class="img-fluid" /></a>
+
   </footer>
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.js"></script>
-  <script src="js/bootstrap.min.js"></script>
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
+
 </body>
 
 </html>
