--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
   </div>
 
   <footer class="row magenta pb-5">
-    <a href="https://www.facebook.com/tastetrekker.store" class="col-sm-1 offset-sm-5"><img src="images/icon-fb.png"
-        alt="facebook" class="img-fluid " /></a>
-    <a href="https://www.facebook.com/tastetrekker.store" class="col-sm-1 "><img src="images/icon-ins.svg"
-        alt="instagram" class="img-fluid" /></a>
+    <a href="https://www.facebook.com/tastetrekker.store" class="offset-sm-5 pl-5"><img src="images/icon-fb.png"
+        alt="facebook" class="img-fluid img-footer" /></a>
+    <a href="https://www.facebook.com/tastetrekker.store"><img src="images/icon-ins.svg" alt="instagram"
+        class="img-fluid img-footer" /></a>
 
   </footer>
 
