--- a/index.html
+++ b/index.html
@@ -67,63 +67,64 @@
     <div class="col-md-12">
       <div class="slider-hero">
         <div class="featured-carousel owl-carousel">
-          <!-- <div class="item">
+          <div class="item">
             <div class="work">
               <div class="img d-flex align-items-center justify-content-center"
                 style="background-image: url(images/slider-0.jpg)">
-                <div class="text text-center">
-                  <h2>Travel through taste</h2>
-                  <h2>with Taste Trekker</h2>
-                  <p> Nơi bạn thoả sức trải nghiệm đặc sản </br>
-                    khắp mọi nơi cách nhanh chóng, đa dạng </p>
-                  <button class="btn btn-primary">Trải nghiệm ngay</button>
-                </div>
+              </div>
+              <div class="text-carousel text text-center">
+                <h2>Travel through taste</h2>
+                <h2>with Taste Trekker</h2>
+                <p> Nơi bạn thoả sức trải nghiệm đặc sản </br>
+                  khắp mọi nơi cách nhanh chóng, đa dạng </p>
+                <button class="btn btn-primary">Trải nghiệm ngay</button>
               </div>
             </div>
-          </div> -->
+          </div>
           <div class="item">
             <div class="work">
-              <div class="img d-flex align-items-center justify-content-center"
-                style="background-image: url(images/slider-1.jpg)">
-                <div class="text text-left">
-                  <h2>Dễ dàng</h2>
-                  <h2 class="text-gray">mở gian hàng online</br>
-                    trên Taste Trekker</h2>
-                  <p class="text-dark-red"> Nơi bạn thoả sức trải nghiệm đặc sản </br>
-                    khắp mọi nơi cách nhanh chóng, đa dạng </p>
-                  <button class="btn btn-primary ">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i>
-                  </button>
-                </div>
+              <div class="img d-flex align-items-center justify-content-center" style="background-image: url(images/slider-1.jpg); 
+               filter: blur(5px); -webkit-filter: blur(5px);
+                 ">
+              </div>
+              <div class="text-carousel text text-left">
+                <h2>Dễ dàng</h2>
+                <h2 class="text-gray">mở gian hàng online</br>
+                  trên Taste Trekker</h2>
+                <p class="text-dark-red"> Nơi bạn thoả sức trải nghiệm đặc sản </br>
+                  khắp mọi nơi cách nhanh chóng, đa dạng </p>
+                <button class="btn btn-primary ">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i>
+                </button>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="work">
               <div class="img d-flex align-items-center justify-content-center"
-                style="background-image: url(images/slider-2.jpg)">
-                <div class="text text-left">
-                  <h2>Quán tốt giá hời</h2>
-                  <h2 class="text-gray">thoải mái trải nghiệm</br>
-                    đặc sản</h2>
-                  <p> Gợi ý cho bạn những quán ăn, địa điểm</br>
-                    bán đặc sản địa phương mà bạn đang du lịch. </p>
-                  <button class="btn btn-primary ">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i>
-                </div>
+                style="background-image: url(images/slider-2.jpg); filter: blur(5px); -webkit-filter: blur(5px);">
+              </div>
+              <div class="text-carousel text text-left">
+                <h2>Quán tốt giá hời</h2>
+                <h2 class="text-gray">thoải mái trải nghiệm</br>
+                  đặc sản</h2>
+                <p> Gợi ý cho bạn những quán ăn, địa điểm</br>
+                  bán đặc sản địa phương mà bạn đang du lịch. </p>
+                <button class="btn btn-primary ">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="work">
               <div class="img d-flex align-items-center justify-content-center"
-                style="background-image: url(images/slider-3.jpg)">
-                <div class="text text-left">
-                  <h2>Đa dạng lựa chọn</h2>
-                  <h2 class="text-gray">các loại đặc sản</br>
-                    Việt Nam</h2>
-                  <p> Gợi ý cho bạn những quán ăn, địa điểm</br>
-                    bán đặc sản địa phương mà bạn đang du lịch. </p>
-                  <button class="btn btn-primary ">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i>
-                </div>
+                style="background-image: url(images/slider-3.jpg); filter: blur(5px); -webkit-filter: blur(5px);">
+              </div>
+              <div class="text-carousel text text-left">
+                <h2>Đa dạng lựa chọn</h2>
+                <h2 class="text-gray">các loại đặc sản</br>
+                  Việt Nam</h2>
+                <p> Gợi ý cho bạn những quán ăn, địa điểm</br>
+                  bán đặc sản địa phương mà bạn đang du lịch. </p>
+                <button class="btn btn-primary ">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i>
               </div>
             </div>
           </div>
@@ -131,6 +132,9 @@
 
         <div class="text-center">
           <ul class="thumbnail choose-carousel ">
+            <li>
+              <a href="#"></a>
+            </li>
             <li class="choose-carousel-1">
               <a href="#"><img src="images/Icon1.png" alt="Image" class="img-fluid" /></a>
               <p>Mua đặc sản online</p>
