--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <h2>with Taste Trekker</h2>
                 <p> Nơi bạn thoả sức trải nghiệm đặc sản </br>
                   khắp mọi nơi cách nhanh chóng, đa dạng </p>
-                <button class="btn btn-primary">Trải nghiệm ngay</button>
+                <a class="btn btn-primary " href="#qr">Trải nghiệm ngay </a>
               </div>
             </div>
           </div>
@@ -93,8 +93,7 @@
                   trên Taste Trekker</h2>
                 <p class="text-dark-red"> Nơi bạn thoả sức trải nghiệm đặc sản </br>
                   khắp mọi nơi cách nhanh chóng, đa dạng </p>
-                <button class="btn btn-primary ">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i>
-                </button>
+                <a class="btn btn-primary " href="#qr">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i></a>
               </div>
             </div>
           </div>
@@ -109,7 +108,7 @@
                   đặc sản</h2>
                 <p> Gợi ý cho bạn những quán ăn, địa điểm</br>
                   bán đặc sản địa phương mà bạn đang du lịch. </p>
-                <button class="btn btn-primary ">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i>
+                <a class="btn btn-primary " href="#qr">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i></a>
               </div>
             </div>
           </div>
@@ -124,7 +123,7 @@
                   Việt Nam</h2>
                 <p> Gợi ý cho bạn những quán ăn, địa điểm</br>
                   bán đặc sản địa phương mà bạn đang du lịch. </p>
-                <button class="btn btn-primary ">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i>
+                <a class="btn btn-primary " href="#qr">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i></a>
               </div>
             </div>
           </div>
@@ -164,7 +163,7 @@
         các sản phẩm độc đáo, cho dù bạn đang đi du lịch hay ở nhà. </br>
         Tạo điều kiện kết nối giữa các nhà sản xuất đặc sản địa phương </br>
         với các khách hàng tiềm năng trên cả nước. </p>
-      <button class="btn btn-primary btn-outline-white">Trải nghiệm ngay</button>
+      <a class="btn btn-primary btn-outline-white" href="#qr">Trải nghiệm ngay</a>
     </div>
     <div class="col-12 col-md-6 text">
       <img src="images/Hand.png" alt="hand" class="img-fluid" />
@@ -238,7 +237,7 @@
     </a>
   </div>
 
-  <div class="row magenta ">
+  <div class="row magenta " id="qr">
     <div class="col-12 col-md-6 text">
       <h2>Tham gia trải nghiệm </br>
         nhận ngay voucher </br>
