--- a/index.html
+++ b/index.html
@@ -88,11 +88,10 @@
                  ">
               </div>
               <div class="text-carousel text text-left">
-                <h2>Dễ dàng</h2>
-                <h2 class="text-gray">mở gian hàng online</br>
-                  trên Taste Trekker</h2>
-                <p class="text-dark-red"> Nơi bạn thoả sức trải nghiệm đặc sản </br>
-                  khắp mọi nơi cách nhanh chóng, đa dạng </p>
+                <h2>Đa dạng lựa chọn</h2>
+                <h2 class="text-gray">các loại đặc sản </br>
+                  Việt Nam</h2>
+                <p class="text-dark-red">Gợi ý những quán ăn, địa điểm bán đặc sản địa  <br/> phương trong nội thành nơi bạn đang ghé thăm.</p>
                 <a class="btn btn-primary " href="#qr">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i></a>
               </div>
             </div>
@@ -106,8 +105,7 @@
                 <h2>Quán tốt giá hời</h2>
                 <h2 class="text-gray">thoải mái trải nghiệm</br>
                   đặc sản</h2>
-                <p> Gợi ý cho bạn những quán ăn, địa điểm</br>
-                  bán đặc sản địa phương mà bạn đang du lịch. </p>
+                <p> Gợi ý những quán ăn, địa điểm bán đặc sản địa <br/> phương trong nội thành nơi bạn đang ghé thăm.</p>
                 <a class="btn btn-primary " href="#qr">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i></a>
               </div>
             </div>
@@ -118,11 +116,9 @@
                 style="background-image: url(images/slider-3.jpg); filter: blur(5px); -webkit-filter: blur(5px);">
               </div>
               <div class="text-carousel text text-left">
-                <h2>Đa dạng lựa chọn</h2>
-                <h2 class="text-gray">các loại đặc sản</br>
-                  Việt Nam</h2>
-                <p> Gợi ý cho bạn những quán ăn, địa điểm</br>
-                  bán đặc sản địa phương mà bạn đang du lịch. </p>
+                <h2>Dễ dàng</h2>
+                <h2 class="text-gray">mở gian hàng online </br> trên Taste Trekker</h2>
+                <p> Mở gian hàng trực tuyến trên Taste Trekker - điểm kết <br/> nối nhà cũng cấp với người tiêu dùng, giúp tăng cao <br/> doanh thu và lượt sản phẩm tiêu thụ</p>
                 <a class="btn btn-primary " href="#qr">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i></a>
               </div>
             </div>
@@ -159,10 +155,8 @@
     <div class="col-12 col-md-6 text">
       <h2>Chào mừng đến với </br>
         Taste Trekker</h2>
-      <p>Taste Trekker là nơi cung cấp sự tiện lợi khi mua và bán </br>
-        các sản phẩm độc đáo, cho dù bạn đang đi du lịch hay ở nhà. </br>
-        Tạo điều kiện kết nối giữa các nhà sản xuất đặc sản địa phương </br>
-        với các khách hàng tiềm năng trên cả nước. </p>
+        <p>Taste Trekker là một nền tảng mua bán đặc sản chất lượng, <br/> đa dạng, mang lại sự tiện lợi cho người dùng.</p>
+        <p>Nhằm  kết nối các nhà cung cấp đặc sản địa phương và <br/> khách hàng tiềm năng trên toàn quốc.</p>
       <a class="btn btn-primary btn-outline-white" href="#qr">Trải nghiệm ngay</a>
     </div>
     <div class="col-12 col-md-6 text">
@@ -183,23 +177,19 @@
     </div>
     <div class="col-12 col-md-6 text">
       <h3>Đối với khách hàng</h3>
-      <p>Taste Trekker sẽ mang cho bạn những thực phẩm đặc sản </br>
-        của nơi mà bạn muốn, để có thể dễ dàng thưởng thức đặc sản </br>
-        ngay tại nhà mà không cần phải đi đâu xa. Ngoài ra, </br>
-        đối với khách hàng là người đang đi du lịch tại địa phương, </br>
-        Taste Trekker sẽ gợi ý cho bạn những địa điểm bán đặc sản </br>
-        tại đó với giá cả phải chăng mà không lo bị chém giá. </p>
+      <p>Taste Trekker cung cấp thực phẩm từ nhiều vùng miền <br /> khác nhau để bạn có thể thưởng thức đặc sản tại nhà <br />
+        dễ dàng, tiện lợi. </p>
+      <p>Ngoài ra, Taste Trekker gợi ý các địa điểm bán đặc sản <br /> với giá cả hợp lý, uy tín, chất lượng cho du khách
+        trong <br /> phạm vi nội thành.</p>
     </div>
   </div>
   <div class="row magenta black d-flex align-items-end pb-5">
     <div class="col-12 col-md-6 text my-0">
       <h3>Đối với nhà cung cấp</h3>
-      <p>Taste Trekker sẽ giúp bạn tạo một gian hàng online trên app </br>
-        của chúng tôi, giúp thúc đẩy doanh số bán hàng và đưa mặt hàng </br>
-        của bạn đến với tay người tiêu dùng. Ngoài ra, với cửa hàng offline,</br>
-        Taste Trekker sẽ đưa ra gợi ý cho khách hàng về cửa hàng của bạn</br>
-        với sự uy tín cao, giúp nâng cao số lượt khách và gia tăng lượng hàng</br>
-        mà bạn bán được. </p>
+      <p>Taste Trekker cung cấp nền tảng giúp bạn tạo gian <br /> hàng trực tuyến trên ứng dụng, gia tăng tăng doanh số <br />
+        bán hàng và đưa sản phẩm của bạn đến tay người tiêu <br /> dùng. </p>
+      <p>Đối với cửa hàng offline, Taste Trekker cung cấp gợi ý <br /> về cửa hàng của bạn giúp thu hút nhiều khách hàng và
+        <br /> tăng số lượng hàng bán ra.</p>
     </div>
     <div class="col-12 col-md-5 offset-md-1 text">
       <img src="images/Vendor.png" alt="vendor" class="img-fluid" />
@@ -242,10 +232,7 @@
       <h2>Tham gia trải nghiệm </br>
         nhận ngay voucher </br>
         giảm giá lên đến 30%</h2>
-      <p>Trong thời gian diễn ra sự kiện ra mắt app,</br>
-        chỉ cần quét mã QR download app sẽ có cơ hội</br>
-        nhận voucher giảm giá cho đơn hàng đầu tiên</br>
-        lên đến 30%.</p>
+      <p>Quét mã QR để download app sẽ có cơ hội nhận ngay <br/> voucher giảm giá cho đơn hàng đầu tiên lên đến 30%.</p>
       <button class="btn btn-primary btn-outline-white">Trải nghiệm ngay</button>
     </div>
     <div class="col-12 col-md-3 offset-md-2 text text-center">
@@ -264,6 +251,7 @@
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
 
