update carousel screen

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                 <h2>Đa dạng lựa chọn</h2>
                 <h2 class="text-gray">các loại đặc sản </br>
                   Việt Nam</h2>
-                <p class="text-dark-red">Gợi ý những quán ăn, địa điểm bán đặc sản địa  <br/> phương trong nội thành nơi bạn đang ghé thăm.</p>
+                <p class="text-dark-red">Gợi ý những quán ăn, địa điểm bán đặc sản địa <br /> phương trong nội thành nơi
+                  bạn đang ghé thăm.</p>
                 <a class="btn btn-primary " href="#qr">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i></a>
               </div>
             </div>
@@ -105,7 +106,8 @@
                 <h2>Quán tốt giá hời</h2>
                 <h2 class="text-gray">thoải mái trải nghiệm</br>
                   đặc sản</h2>
-                <p> Gợi ý những quán ăn, địa điểm bán đặc sản địa <br/> phương trong nội thành nơi bạn đang ghé thăm.</p>
+                <p> Gợi ý những quán ăn, địa điểm bán đặc sản địa <br /> phương trong nội thành nơi bạn đang ghé thăm.
+                </p>
                 <a class="btn btn-primary " href="#qr">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i></a>
               </div>
             </div>
@@ -118,7 +120,8 @@
               <div class="text-carousel text text-left">
                 <h2>Dễ dàng</h2>
                 <h2 class="text-gray">mở gian hàng online </br> trên Taste Trekker</h2>
-                <p> Mở gian hàng trực tuyến trên Taste Trekker - điểm kết <br/> nối nhà cũng cấp với người tiêu dùng, giúp tăng cao <br/> doanh thu và lượt sản phẩm tiêu thụ</p>
+                <p> Mở gian hàng trực tuyến trên Taste Trekker - điểm kết <br /> nối nhà cũng cấp với người tiêu dùng,
+                  giúp tăng cao <br /> doanh thu và lượt sản phẩm tiêu thụ</p>
                 <a class="btn btn-primary " href="#qr">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i></a>
               </div>
             </div>
@@ -155,8 +158,9 @@
     <div class="col-12 col-md-6 text">
       <h2>Chào mừng đến với </br>
         Taste Trekker</h2>
-        <p>Taste Trekker là một nền tảng mua bán đặc sản chất lượng, <br/> đa dạng, mang lại sự tiện lợi cho người dùng.</p>
-        <p>Nhằm  kết nối các nhà cung cấp đặc sản địa phương và <br/> khách hàng tiềm năng trên toàn quốc.</p>
+      <p>Taste Trekker là một nền tảng mua bán đặc sản chất lượng, <br /> đa dạng, mang lại sự tiện lợi cho người dùng.
+      </p>
+      <p>Nhằm kết nối các nhà cung cấp đặc sản địa phương và <br /> khách hàng tiềm năng trên toàn quốc.</p>
       <a class="btn btn-primary btn-outline-white" href="#qr">Trải nghiệm ngay</a>
     </div>
     <div class="col-12 col-md-6 text">
@@ -177,44 +181,71 @@
     </div>
     <div class="col-12 col-md-6 text">
       <h3>Đối với khách hàng</h3>
-      <p>Taste Trekker cung cấp thực phẩm từ nhiều vùng miền <br /> khác nhau để bạn có thể thưởng thức đặc sản tại nhà <br />
-        dễ dàng, tiện lợi. </p>
-      <p>Ngoài ra, Taste Trekker gợi ý các địa điểm bán đặc sản <br /> với giá cả hợp lý, uy tín, chất lượng cho du khách
+      <p>Taste Trekker cung cấp thực phẩm từ nhiều vùng miền <br /> khác nhau để bạn có thể thưởng thức đặc sản tại nhà
+        <br />
+        dễ dàng, tiện lợi.
+      </p>
+      <p>Ngoài ra, Taste Trekker gợi ý các địa điểm bán đặc sản <br /> với giá cả hợp lý, uy tín, chất lượng cho du
+        khách
         trong <br /> phạm vi nội thành.</p>
     </div>
   </div>
   <div class="row magenta black d-flex align-items-end pb-5">
     <div class="col-12 col-md-6 text my-0">
       <h3>Đối với nhà cung cấp</h3>
-      <p>Taste Trekker cung cấp nền tảng giúp bạn tạo gian <br /> hàng trực tuyến trên ứng dụng, gia tăng tăng doanh số <br />
-        bán hàng và đưa sản phẩm của bạn đến tay người tiêu <br /> dùng. </p>
-      <p>Đối với cửa hàng offline, Taste Trekker cung cấp gợi ý <br /> về cửa hàng của bạn giúp thu hút nhiều khách hàng và
-        <br /> tăng số lượng hàng bán ra.</p>
+      <p>Taste Trekker cung cấp nền tảng giúp bạn tạo gian <br /> hàng trực tuyến trên ứng dụng, gia tăng tăng doanh số
+        <br />
+        bán hàng và đưa sản phẩm của bạn đến tay người tiêu <br /> dùng.
+      </p>
+      <p>Đối với cửa hàng offline, Taste Trekker cung cấp gợi ý <br /> về cửa hàng của bạn giúp thu hút nhiều khách hàng
+        và
+        <br /> tăng số lượng hàng bán ra.
+      </p>
     </div>
     <div class="col-12 col-md-5 offset-md-1 text">
       <img src="images/Vendor.png" alt="vendor" class="img-fluid" />
     </div>
   </div>
 
-  <div id="carouselScreen" class="carousel slide p-5 black" data-ride="carousel">
+  <div id="carouselScreen" class="carousel slide black" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselScreen" data-slide-to="0" class="active"></li>
       <li data-target="#carouselScreen" data-slide-to="1"></li>
       <li data-target="#carouselScreen" data-slide-to="2"></li>
       <li data-target="#carouselScreen" data-slide-to="3"></li>
+      <li data-target="#carouselScreen" data-slide-to="4"></li>
+      <li data-target="#carouselScreen" data-slide-to="5"></li>
+      <li data-target="#carouselScreen" data-slide-to="6"></li>
+      <li data-target="#carouselScreen" data-slide-to="7"></li>
+      <li data-target="#carouselScreen" data-slide-to="8"></li>
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block mx-auto w-25" src="images/Screen-order.png" alt="Screen-order">
+        <img class="d-block mx-auto w-100" src="images/screenLogin.png" alt="screenLogin">
       </div>
       <div class="carousel-item">
-        <img class="d-block mx-auto w-25" src="images/Screen-receive-product.png" alt="Screen-receive-product">
+        <img class="d-block mx-auto w-100" src="images/screenHome.png" alt="screenHome">
       </div>
       <div class="carousel-item ">
-        <img class="d-block mx-auto w-25" src="images/Screen-select-product.png" alt="Screen-select-product">
+        <img class="d-block mx-auto w-100" src="images/screenProduct.png" alt="screenProduct">
       </div>
       <div class="carousel-item">
-        <img class="d-block mx-auto w-25" src="images/Screen-tracking.png" alt="Screen tracking">
+        <img class="d-block mx-auto w-100" src="images/screenCart.png" alt="screenCart">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block mx-auto w-100" src="images/screenPayment.png" alt="screenPayment">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block mx-auto w-100" src="images/screenTracking1.png" alt="screenTracking1">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block mx-auto w-100" src="images/screenTracking2.png" alt="screenTracking2">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block mx-auto w-100" src="images/screenFeedback.png" alt="screenFeedback">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block mx-auto w-100" src="images/screenProfile.png" alt="screenProfile">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselScreen" role="button" data-slide="prev">
@@ -232,7 +263,8 @@
       <h2>Tham gia trải nghiệm </br>
         nhận ngay voucher </br>
         giảm giá lên đến 30%</h2>
-      <p>Quét mã QR để download app sẽ có cơ hội nhận ngay <br/> voucher giảm giá cho đơn hàng đầu tiên lên đến 30%.</p>
+      <p>Quét mã QR để download app sẽ có cơ hội nhận ngay <br /> voucher giảm giá cho đơn hàng đầu tiên lên đến 30%.
+      </p>
       <button class="btn btn-primary btn-outline-white">Trải nghiệm ngay</button>
     </div>
     <div class="col-12 col-md-3 offset-md-2 text text-center">
