update missing narrow

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <h2>with Taste Trekker</h2>
                 <p> Nơi bạn thoả sức trải nghiệm đặc sản </br>
                   khắp mọi nơi cách nhanh chóng, đa dạng </p>
-                <a class="btn btn-primary " href="#qr">Trải nghiệm ngay </a>
+                <a class="btn btn-primary " href="#qr">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i></a>
               </div>
             </div>
           </div>
