--- a/index.html
+++ b/index.html
@@ -76,22 +76,21 @@
                 <h2>Travel through taste</h2>
                 <h2>with Taste Trekker</h2>
                 <p> Nơi bạn thoả sức trải nghiệm đặc sản </br>
-                  khắp mọi nơi cách nhanh chóng, đa dạng </p>
+                  nhiều vùng miền một cách nhanh chóng, đa dạng </p>
                 <a class="btn btn-primary " href="#qr">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i></a>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="work">
-              <div class="img d-flex align-items-center justify-content-center" style="background-image: url(images/slider-1.jpg); 
-               filter: blur(5px); -webkit-filter: blur(5px);
-                 ">
+              <div class="img d-flex align-items-center justify-content-center"
+                style="background-image: url(images/slider-3.jpg); filter: blur(5px); -webkit-filter: blur(5px);">
               </div>
               <div class="text-carousel text text-left">
                 <h2>Đa dạng lựa chọn</h2>
                 <h2 class="text-gray">các loại đặc sản </br>
                   Việt Nam</h2>
-                <p class="text-dark-red">Gợi ý những quán ăn, địa điểm bán đặc sản địa <br /> phương trong nội thành nơi
+                <p>Gợi ý những quán ăn, địa điểm bán đặc sản địa <br /> phương trong nội thành nơi
                   bạn đang ghé thăm.</p>
                 <a class="btn btn-primary " href="#qr">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i></a>
               </div>
@@ -114,15 +113,19 @@
           </div>
           <div class="item">
             <div class="work">
-              <div class="img d-flex align-items-center justify-content-center"
-                style="background-image: url(images/slider-3.jpg); filter: blur(5px); -webkit-filter: blur(5px);">
+              <div class="img d-flex align-items-center justify-content-center" style="background-image: url(images/slider-1.jpg); 
+               filter: blur(5px); -webkit-filter: blur(5px);
+                 ">
               </div>
               <div class="text-carousel text text-left">
                 <h2>Dễ dàng</h2>
-                <h2 class="text-gray">mở gian hàng online </br> trên Taste Trekker</h2>
-                <p> Mở gian hàng trực tuyến trên Taste Trekker - điểm kết <br /> nối nhà cũng cấp với người tiêu dùng,
+                <h2 class="text-gray">mở gian hàng trực tuyến </br> trên Taste Trekker</h2>
+                <p class="text-dark-red"> Mở gian hàng trực tuyến trên Taste Trekker - điểm kết <br /> nối nhà cũng
+                  cấp
+                  với người tiêu dùng,
                   giúp tăng cao <br /> doanh thu và lượt sản phẩm tiêu thụ</p>
-                <a class="btn btn-primary " href="#qr">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i></a>
+
+                <a class="btn btn-primary" href="#qr">Trải nghiệm ngay <i class="icon-long-arrow-right pl-1"></i></a>
               </div>
             </div>
           </div>
@@ -261,8 +264,8 @@
   <div class="row magenta " id="qr">
     <div class="col-12 col-md-6 text">
       <h2>Tham gia trải nghiệm </br>
-        nhận ngay voucher </br>
-        giảm giá lên đến 30%</h2>
+        nhận ngay ưu đãi </br>
+        lên đến 30% </h2>
       <p>Quét mã QR để download app sẽ có cơ hội nhận ngay <br /> voucher giảm giá cho đơn hàng đầu tiên lên đến 30%.
       </p>
       <button class="btn btn-primary btn-outline-white">Trải nghiệm ngay</button>
