--- a/index.html
+++ b/index.html
@@ -271,7 +271,8 @@
       <button class="btn btn-primary btn-outline-white">Trải nghiệm ngay</button>
     </div>
     <div class="col-12 col-md-3 offset-md-2 text text-center">
-      <img src="images/QR.jpg" alt="QR" class="img-fluid border-qr" />
+      <a href="http://bit.ly/3J46pXl"><img src="images/QR.png" alt="QR" class="img-fluid border-qr" /></a>
+
       <p class="mt-3">Thời gian: 5/6 - 12/6/2023</p>
     </div>
   </div>
