--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
               <li class="has-children">
                 <a href="#"><span>Bán hàng trên Taste Trekker </span></a>
                 <ul class="dropdown arrow-top">
-                  <li><a href="#">Đăng nhập</a></li>
-                  <li><a href="#">Đăng ký ngay</a></li>
+                  <li><a href="https://hoghanh.github.io/tastetrekker_dashboard/#/login">Đăng nhập</a></li>
+                  <li><a href="https://hoghanh.github.io/tastetrekker_dashboard/#/register">Đăng ký ngay</a></li>
                 </ul>
               </li>
               <li><a href="#"><span>Trung tâm hỗ trợ</span></a></li>
