--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
 
+  <!-- <p>Test update </p> -->
 </body>
 
 </html>
